--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
+<!--test comments-->
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Views\" />
