Connection to DB is up and running. New class library BolindersBil.Data. Correct references.

--- a/BolindersBil.Data/BolindersBil.Data.csproj
+++ b/BolindersBil.Data/BolindersBil.Data.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BolindersBil.Models\BolindersBil.Models.csproj" />
   </ItemGroup>
 
 </Project>
