--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -14,16 +14,15 @@
 
   <ItemGroup>
 
-    <ProjectReference Include="..\BolindersBil.Models\BolindersBil.Models.csproj" />
-    <ProjectReference Include="..\BolindersBil.Repositories\BolindersBil.Repositories.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
 
   </ItemGroup>
 
   <ItemGroup>
-
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
-
+    <ProjectReference Include="..\BolindersBil.Data\BolindersBil.Data.csproj" />
+    <ProjectReference Include="..\BolindersBil.Models\BolindersBil.Models.csproj" />
+    <ProjectReference Include="..\BolindersBil.Repositories\BolindersBil.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
