--- a/BolindersBil.Web/appsettings.json
+++ b/BolindersBil.Web/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    //Mallorys appsetting.json file
     "BolindersBil": "Server=localhost;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
