--- a/BolindersBil.Data/BolindersBil.Data.csproj
+++ b/BolindersBil.Data/BolindersBil.Data.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+    <PackageReference Include="NewsAPI" Version="0.5.0" />
   </ItemGroup>
 
   <ItemGroup>
