Deleted migrations folder and dropped all tables in the DB.

--- a/BolindersBil.Web/appsettings.json
+++ b/BolindersBil.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BolindersBil": "Server=5CG7233DZR\\SQLEXPRESS;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BolindersBil": "Server=localhost;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   }
 }
