--- a/BolindersBil.Repositories/BolindersBil.Repositories.csproj
+++ b/BolindersBil.Repositories/BolindersBil.Repositories.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+    <PackageReference Include="NewsAPI" Version="0.5.0" />
   </ItemGroup>
 
   <ItemGroup>
