--- a/BolindersBil.Models/BolindersBil.Models.csproj
+++ b/BolindersBil.Models/BolindersBil.Models.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
 
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.3" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
