--- a/BolindersBil.Repositories/BolindersBil.Repositories.csproj
+++ b/BolindersBil.Repositories/BolindersBil.Repositories.csproj
@@ -8,6 +8,7 @@
 
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
     
