Git ignore test.

--- a/BolindersBil.Web/appsettings.json
+++ b/BolindersBil.Web/appsettings.json
@@ -3,3 +3,4 @@
     "BolindersBil": "Server=localhost;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
+//test comment
