--- a/BolindersBil.Repositories/BolindersBil.Repositories.csproj
+++ b/BolindersBil.Repositories/BolindersBil.Repositories.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     
   </ItemGroup>
 
