--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
 
   </ItemGroup>
 
