--- a/BolindersBil.Web/appsettings.json
+++ b/BolindersBil.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "BolindersBil": "Server=localhost;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BolindersBil": "Server=5CG7065BJS;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
