--- a/BolindersBil.Web/appsettings.json
+++ b/BolindersBil.Web/appsettings.json
@@ -1,6 +1,5 @@
 {
   "ConnectionStrings": {
-    "BolindersBil": "Server=5CG7065BJS;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "NewsApiKey": "8a9c9b8aa9bb4c01ab3ea332452176af"
+    "BolindersBil": "Server=localhost;Database=BolindersBil;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
