--- a/BolindersBil.Models/BolindersBil.Models.csproj
+++ b/BolindersBil.Models/BolindersBil.Models.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
 
 
   </ItemGroup>
