--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
     <PackageReference Include="NewsAPI" Version="0.5.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
 
   </ItemGroup>
 
@@ -23,6 +24,11 @@
     <ProjectReference Include="..\BolindersBil.Data\BolindersBil.Data.csproj" />
     <ProjectReference Include="..\BolindersBil.Models\BolindersBil.Models.csproj" />
     <ProjectReference Include="..\BolindersBil.Repositories\BolindersBil.Repositories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\Vehicle_Images\80\" />
+    <Folder Include="wwwroot\images\Vehicle_Images\Original\" />
   </ItemGroup>
 
 </Project>
