--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <None Include="wwwroot\js\MapsApi.js" />
     <PackageReference Include="jQuery" Version="3.3.1" />
+    <PackageReference Include="jQuery.FileUpload" Version="9.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.3" />
@@ -27,8 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\Vehicle_Images\80\" />
-    <Folder Include="wwwroot\images\Vehicle_Images\Original\" />
+    <Folder Include="wwwroot\images\Vehicle_Images\" />
   </ItemGroup>
 
 </Project>
