Slow progress on the adding images folders..

--- a/BolindersBil.Web/BolindersBil.Web.csproj
+++ b/BolindersBil.Web/BolindersBil.Web.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\BolindersBil.Repositories\BolindersBil.Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\vehicle_images\" />
+  </ItemGroup>
+
 </Project>
